--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -18,8 +18,9 @@
         android:hint="@string/first_name"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textAlignment="center"
         android:textColor="@color/colorWhite"
-        android:textColorHint="@color/colorSmallText"
+        android:textColorHint="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,8 +36,9 @@
         android:hint="Last Name"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textAlignment="center"
         android:textColor="@color/colorWhite"
-        android:textColorHint="@color/colorAccent"
+        android:textColorHint="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,8 +53,9 @@
         android:hint="Enter Email"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
+        android:textAlignment="center"
         android:textColor="@color/colorWhite"
-        android:textColorHint="@color/colorSecondaryText"
+        android:textColorHint="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,8 +70,9 @@
         android:hint="Enter Password"
         android:inputType="textPassword"
         android:minHeight="48dp"
+        android:textAlignment="center"
         android:textColor="@color/colorWhite"
-        android:textColorHint="@color/colorSecondaryText"
+        android:textColorHint="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,8 +88,9 @@
         android:hint="Enter Username"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textAlignment="center"
         android:textColor="@color/colorWhite"
-        android:textColorHint="#E91E63"
+        android:textColorHint="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
