Event Fragment Edits

--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:fontFamily="casual"
         android:text="time_status"
         android:textColor="@color/colorWhite"
         android:textSize="20sp"
@@ -25,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="29dp"
+        android:fontFamily="casual"
         android:text="venue"
         android:textColor="@color/colorWhite"
         android:textSize="20sp"
@@ -37,6 +39,7 @@
         android:layout_width="289dp"
         android:layout_height="57dp"
         android:layout_marginTop="100dp"
+        android:fontFamily="casual"
         android:text="event_title"
         android:textAlignment="center"
         android:textColor="@color/colorAccent"
@@ -51,6 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:fontFamily="casual"
         android:text="date_time"
         android:textColor="@color/colorWhite"
         android:textSize="20sp"
@@ -64,6 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="22dp"
+        android:fontFamily="casual"
         android:text="online_venue"
         android:textAlignment="center"
         android:textColor="@color/colorWhite"
@@ -88,6 +93,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:fontFamily="casual"
         android:text="This is where the short event description would go. A string called shortDescription."
         android:textAlignment="center"
         android:textColor="@color/colorWhite"
