API Intergration and EventListViewModel setup

--- a/app/src/main/res/navigation/login_nav.xml
+++ b/app/src/main/res/navigation/login_nav.xml
@@ -72,9 +72,39 @@
         android:name="com.latifah.techbook.ui.fragments.EventsList"
         android:label="Near Me"
         tools:layout="@layout/events_list_fragment" >
+        <argument
+            android:name="location"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="@null" />
         <action
             android:id="@+id/action_eventsList_to_event"
-            app:destination="@id/event" />
+            app:destination="@id/event" >
+            <argument
+                android:name="eventName"
+                app:argType="string"
+                app:nullable="true"/>
+            <argument
+                android:name="eventDate"
+                app:argType="string"
+                app:nullable="true"/>
+            <argument
+                android:name="eventTime"
+                app:argType="string"
+                app:nullable="true"/>
+            <argument
+                android:name="eventVenue"
+                app:argType="string"
+                app:nullable="true"/>
+            <argument
+                android:name="onlineVenue"
+                app:argType="string"
+                app:nullable="true"/>
+            <argument
+                android:name="eventDescription"
+                app:argType="string"
+                app:nullable="true"/>
+        </action>
 
     </fragment>
     <fragment
@@ -84,22 +114,28 @@
         tools:layout="@layout/event">
         <argument
             android:name="eventName"
-            app:argType="string" />
+            app:argType="string"
+            app:nullable="true"/>
         <argument
             android:name="eventDate"
-            app:argType="string" />
+            app:argType="string"
+            app:nullable="true"/>
         <argument
             android:name="eventTime"
-            app:argType="string" />
+            app:argType="string"
+            app:nullable="true"/>
         <argument
             android:name="eventVenue"
-            app:argType="string" />
+            app:argType="string"
+            app:nullable="true"/>
         <argument
             android:name="onlineVenue"
-            app:argType="string" />
+            app:argType="string"
+            app:nullable="true"/>
         <argument
             android:name="eventDescription"
-            app:argType="string" />
+            app:argType="string"
+            app:nullable="true"/>
     </fragment>
     <argument
         android:name="name"
@@ -158,7 +194,14 @@
         android:label="EventSearch" >
         <action
             android:id="@+id/action_eventSearch_to_eventsList"
-            app:destination="@id/eventsList" />
+            app:destination="@id/eventsList"
+            >
+        <argument
+            android:name="location"
+            android:defaultValue="@null"
+            app:argType="string"
+            app:nullable="true" />
+        </action>
     </fragment>
 
 </navigation>
